add filters component

--- a/projects/admin/src/app/shared/components/data-table/data-table.component.html
+++ b/projects/admin/src/app/shared/components/data-table/data-table.component.html
@@ -1,2 +1,3 @@
+<app-filter-data-table [schema]="schemaInfo.schema" (search)="filters.setValue($event)" />
 <button mat-raised-button color="primary" [routerLink]="['../../', 'create', entityName]">Add New (+)</button>
 <app-table [isPageable]="true" [tableColumns]="tableColumns" [tableData]="result.items" (fetchData)="fetchData()" />
