--- a/projects/admin/src/styles.scss
+++ b/projects/admin/src/styles.scss
@@ -14,3 +14,8 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+html {
+  --size-small: 8px;
+  --size-medium: 16px;
+}
