--- a/projects/admin/src/app/shared/components/data-table/filter-data-table/filter-data-table.component.html
+++ b/projects/admin/src/app/shared/components/data-table/filter-data-table/filter-data-table.component.html
@@ -13,16 +13,16 @@
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field>
-      <mat-label>operator</mat-label>
-      <mat-select [formControl]="filter.controls.operator" required>
-        <mat-option [value]="'equals'">=</mat-option>
-        <mat-option [value]="'lte'">&lt;</mat-option>
-        <mat-option [value]="'gte'">&gt;</mat-option>
-      </mat-select>
-    </mat-form-field>
-
     @if (filter.controls.field.value) {
+      <mat-form-field>
+        <mat-label>operator</mat-label>
+        <mat-select [formControl]="filter.controls.operator" required>
+          @for (operator of typeOperator[filter.controls.type.value]; track $index) {
+            <mat-option [value]="operator">{{ operator }} </mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
+
       <mat-form-field>
         <mat-label>value</mat-label>
         <input matInput [type]="filter.controls.type.value" [formControl]="filter.controls.value" required />
