auth after logoff/signal Co-authored-by: Hadi Kashlan <ha-akelius@users.noreply.github.com>

--- a/projects/admin/src/app/layout/header/header.component.html
+++ b/projects/admin/src/app/layout/header/header.component.html
@@ -3,5 +3,6 @@
     <button mat-icon-button (click)="toggleSidebar()">
       <mat-icon class="edit-text">menu</mat-icon>
     </button>
+    <button mat-button (click)="logout()">Logout</button>
   </mat-toolbar-row>
 </mat-toolbar>
