--- a/projects/admin/src/app/shared/components/data-table/data-table.component.html
+++ b/projects/admin/src/app/shared/components/data-table/data-table.component.html
@@ -1,3 +1,21 @@
+<div class="container">
+  <h2>User</h2>
+  <div class="button-group">
+    <button mat-raised-button class="custom-button" color="primary" [routerLink]="['../../', 'create', entityName]">
+      + Add New User
+    </button>
+    <button [matMenuTriggerFor]="menu" aria-label="Settings menu">
+      <mat-icon>settings</mat-icon>
+    </button>
+  </div>
+</div>
+
 <app-filter-data-table [schema]="schemaInfo.schema" (search)="filters.setValue($event)" />
-<button mat-raised-button color="primary" [routerLink]="['../../', 'create', entityName]">Add New (+)</button>
 <app-table [isPageable]="true" [tableColumns]="tableColumns" [tableData]="result.items" (fetchData)="fetchData()" />
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item>
+    <mat-icon>download</mat-icon>
+    download
+  </button>
+</mat-menu>
