--- a/projects/admin/src/app/shared/components/data-table/filter-data-table/filter-data-table.component.html
+++ b/projects/admin/src/app/shared/components/data-table/filter-data-table/filter-data-table.component.html
@@ -1,37 +1,64 @@
-<button mat-fab color="primary" (click)="addFilter()">
-  <mat-icon>add</mat-icon>
-</button>
-<!-- @for (filter of fitlers.controls; track filter; let idx = $index) { -->
-<ng-container *ngFor="let filter of filters.controls; let idx = index">
-  <div [formGroup]="filter">
-    <mat-form-field>
-      <mat-label>field</mat-label>
-      <mat-select [formControl]="filter.controls.field" required>
-        @for (property of schema.properties | keyvalue; track property) {
-          <mat-option [value]="property.key">{{ property.key }}</mat-option>
-        }
-      </mat-select>
-    </mat-form-field>
+<div class="filter-container">
+  <button mat-flat-button class="square-button" color="primary" (click)="triggerSearch()" [disabled]="filters.invalid">
+    <mat-icon>search</mat-icon>
+    <span class="filter-field">Search</span>
+  </button>
+  <button mat-fab color="primary" class="square-button" (click)="toggleFilterList()">
+    <mat-icon>filter_list</mat-icon>
+    <p class="filter-text filter-field">Filters</p>
+  </button>
 
-    @if (filter.controls.field.value) {
+  <mat-chip-row *ngFor="let filter of filters.value; let i = index">
+    {{ filter.field }} {{ filter.operator }} {{ filter.value }}
+    <button matChipRemove (click)="removeFilter(i)" class="chip-remove-button">
+      <mat-icon>cancel</mat-icon>
+    </button>
+  </mat-chip-row>
+</div>
+
+<div *ngIf="isFilterListOpen" class="field">
+  <ng-container *ngFor="let filter of filters.controls; let idx = index">
+    <div [formGroup]="filter" class="filter-container">
       <mat-form-field>
-        <mat-label>operator</mat-label>
-        <mat-select [formControl]="filter.controls.operator" required>
-          @for (operator of typeOperator[filter.controls.type.value]; track $index) {
-            <mat-option [value]="operator">{{ operator }} </mat-option>
-          }
+        <mat-label>field</mat-label>
+        <mat-select [formControl]="filter.controls.field" required>
+          <mat-option *ngFor="let property of schema.properties | keyvalue" [value]="property.key">
+            {{ property.key }}
+          </mat-option>
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field>
-        <mat-label>value</mat-label>
-        <input matInput [type]="filter.controls.type.value" [formControl]="filter.controls.value" required />
-      </mat-form-field>
-    }
-    <button mat-fab color="warn" (click)="removeFilter(idx)">
-      <mat-icon>remove</mat-icon>
-    </button>
-  </div>
-</ng-container>
+      @if (filter.controls.field.value) {
+        <mat-form-field>
+          <mat-label>operator</mat-label>
+          <mat-select [formControl]="filter.controls.operator" required>
+            <mat-option
+              *ngFor="let operator of typeOperator[filter.controls.type.value]; let i = index"
+              [value]="operator"
+            >
+              {{ operator }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
 
-<button mat-flat-button color="primary" (click)="triggerSearch()" [disabled]="filters.invalid">serach</button>
+        <mat-form-field>
+          <mat-label>value</mat-label>
+          <input matInput [type]="filter.controls.type.value" [formControl]="filter.controls.value" required />
+        </mat-form-field>
+      }
+
+      <div>
+        <button mat-icon-button color="warn" (click)="removeFilter(idx)">
+          <mat-icon>remove</mat-icon>
+        </button>
+
+        <button mat-icon-button color="primary" (click)="addFilter()" *ngIf="idx === filters.controls.length - 1">
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
+    </div>
+  </ng-container>
+</div>
+<button mat-icon-button color="primary" (click)="addFilter()" *ngIf="!isFilterListOpen">
+  <mat-icon>add</mat-icon>
+</button>
