--- a/projects/admin/src/app/shared/components/dynamic-form/dynamic-form.component.html
+++ b/projects/admin/src/app/shared/components/dynamic-form/dynamic-form.component.html
@@ -14,6 +14,13 @@
         />
         <!--  -->
       </mat-form-field>
+
+      <app-relation
+        *ngIf="propInfo.property.$ref"
+        [entityName]="propInfo.property.$ref"
+        [formControlName]="propInfo.name"
+      ></app-relation>
+
       <mat-form-field
         *ngIf="getFirstType(propInfo.property) === 'boolean'"
         [formControlName]="propInfo.name"
