--- a/projects/admin/src/core/components/table/table.component.html
+++ b/projects/admin/src/core/components/table/table.component.html
@@ -19,7 +19,7 @@
       }
       <!-- else not sortable -->
       <!-- column data -->
-      <td mat-cell *matCellDef="let element" [class.text-right]="tableColumn.position === 'right'">
+      <td mat-cell *matCellDef="let element" [class.text-right]="tableColumn.position == 'right'">
         @if (templates.get(tableColumn.name); as template) {
           <ng-container *ngTemplateOutlet="template; context: { $implicit: element }"></ng-container>
         } @else if (tableColumn.fn) {
