--- a/projects/admin/src/app/login/login.component.html
+++ b/projects/admin/src/app/login/login.component.html
@@ -17,7 +17,7 @@
         <mat-label>Password</mat-label>
         <input type="password" formControlName="password" placeholder="Enter Your Password" matInput required />
         <mat-error>
-          @if (loginForm.get("password").invalid) {
+          @if (loginForm.controls.password.invalid) {
             Password is
             <strong>required</strong>
           }
