--- a/projects/admin/src/app/login/login.component.html
+++ b/projects/admin/src/app/login/login.component.html
@@ -24,6 +24,7 @@
         </mat-error>
       </mat-form-field>
 
+      <mat-error *ngIf="loginStatus">wrong user name or password</mat-error>
       <div>
         <mat-checkbox>Remember me</mat-checkbox>
       </div>
