--- a/projects/admin/src/app/shared/components/dynamic-form/relation/relation.component.html
+++ b/projects/admin/src/app/shared/components/dynamic-form/relation/relation.component.html
@@ -1,9 +1,13 @@
+{{ selectedValue | json }}
 <mat-form-field>
-  <mat-label>Number</mat-label>
-  <input type="text" placeholder="Pick one" aria-label="Number" matInput [matAutocomplete]="auto" />
+  <mat-label>{{ entityName }}</mat-label>
+  <input type="text" [formControl]="filterControl" matInput [matAutocomplete]="auto" />
   <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
     @for (option of result.items; track option) {
-      <mat-option [value]="option.id">{{ option.name }}</mat-option>
+      <mat-option [value]="option">{{ option.name }}</mat-option>
+    }
+    @if (result.items.length === 0) {
+      <mat-option>nothing to select</mat-option>
     }
   </mat-autocomplete>
 </mat-form-field>
