--- a/projects/admin/src/app/shared/components/dynamic-form/relation/relation.component.html
+++ b/projects/admin/src/app/shared/components/dynamic-form/relation/relation.component.html
@@ -1,8 +1,7 @@
-{{ selectedValue | json }}
 <mat-form-field>
   <mat-label>{{ entityName }}</mat-label>
   <input type="text" [formControl]="filterControl" matInput [matAutocomplete]="auto" />
-  <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+  <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFn">
     @for (option of result.items; track option) {
       <mat-option [value]="option">{{ option.name }}</mat-option>
     }
