--- a/projects/admin/src/app/app.component.html
+++ b/projects/admin/src/app/app.component.html
@@ -17,7 +17,7 @@
     </mat-sidenav>
 
     <mat-sidenav-content>
-      <app-header (toggleSidebarForMe)="snav.toggle()" />
+      <!-- <app-header (toggleSidebarForMe)="snav.toggle()" /> -->
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
