--- a/projects/admin/src/app/layout/dashboard/dashboard.component.html
+++ b/projects/admin/src/app/layout/dashboard/dashboard.component.html
@@ -21,14 +21,8 @@
                 {{ element.description }}
               </td>
             </ng-container>
-            <ng-container matColumnDef="price">
-              <th mat-sort-header mat-header-cell *matHeaderCellDef>Price</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.price | currency }}
-              </td>
-            </ng-container>
             <ng-container matColumnDef="action">
-              <th mat-sort-header mat-header-cell *matHeaderCellDef>Price</th>
+              <th mat-sort-header mat-header-cell *matHeaderCellDef>Action</th>
               <td mat-cell *matCellDef="let element">
                 <button mat-raised-button (click)="editproduct(element.id)" color="primary">Edit</button>
                 <button mat-raised-button (click)="removeproduct(element.id); snackBarRemove()" color="warn">
@@ -47,7 +41,7 @@
       @if (formStatus === FormStatus.Add || formStatus === FormStatus.Edit) {
         <mat-card class="mat-card-ed">
           <mat-card-header>
-            <h2>Add/Edit Product</h2>
+            <h2>Add/Edit</h2>
           </mat-card-header>
           <mat-card-content>
             <mat-form-field>
@@ -62,10 +56,6 @@
               <mat-label>Description</mat-label>
               <input formControlName="description" matInput />
             </mat-form-field>
-            <mat-form-field>
-              <mat-label>Price</mat-label>
-              <input formControlName="price" matInput />
-            </mat-form-field>
           </mat-card-content>
           <mat-card-actions>
             <button
@@ -73,11 +63,11 @@
               type="submit"
               (click)="snackBarOpen()"
               [disabled]="!isFormValid()"
-              class="custom-save-color"
+              color="primary"
             >
               Save
             </button>
-            <a mat-raised-button class="custom-button-color" (click)="backtolist()">Cancel</a>
+            <a mat-raised-button color="warn" (click)="backtolist()">Cancel</a>
           </mat-card-actions>
         </mat-card>
       }
