--- a/projects/admin/src/app/layout/sidenav/sidenav.component.html
+++ b/projects/admin/src/app/layout/sidenav/sidenav.component.html
@@ -11,13 +11,21 @@
     <mat-icon class="edit-icon">dashboard</mat-icon><span class="edit-text"> Dashboard </span>
   </a>
 
-  <a mat-list-item>
+  <a mat-list-item [routerLink]="['list/course']">
     <mat-icon class="edit-icon">edit</mat-icon>
-    <span class="edit-text"> Link 3</span>
+    <span class="edit-text"> Course</span>
   </a>
-  <a mat-list-item> <mat-icon class="edit-icon">edit</mat-icon><span class="edit-text"> Link 4 </span> </a>
-  <a mat-list-item>
+  <a mat-list-item [routerLink]="['list/courseinstance']">
+    <mat-icon class="edit-icon">edit</mat-icon><span class="edit-text"> CourseInstance</span>
+  </a>
+
+  <a mat-list-item [routerLink]="['list/path']">
     <mat-icon class="edit-icon">edit</mat-icon>
-    <span class="edit-text"> Link 5</span>
+    <span class="edit-text"> Path</span>
+  </a>
+
+  <a mat-list-item [routerLink]="['list/pathinstance']">
+    <mat-icon class="edit-icon">edit</mat-icon>
+    <span class="edit-text"> PathInstance</span>
   </a>
 </mat-nav-list>
