convert-ltr-rtl

--- a/projects/admin/src/app/login/login.component.html
+++ b/projects/admin/src/app/login/login.component.html
@@ -1,3 +1,5 @@
+<button (click)="changeToEnglish()">English</button>
+<button (click)="changeToArabic()">Arabic</button>
 <mat-card class="login-container">
   <mat-card-content>
     <form [formGroup]="loginForm" (ngSubmit)="login()" class="form-group">
