--- a/projects/admin/src/app/shared/components/dynamic-form/dynamic-form.component.html
+++ b/projects/admin/src/app/shared/components/dynamic-form/dynamic-form.component.html
@@ -8,7 +8,7 @@
         @switch (propInfo.inputType) {
           @case (inputType.dateTime) {
             <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-              <mat-label>{{ propInfo.name }}</mat-label>
+              <mat-label>{{ entityTranslations[propInfo.name] }}</mat-label>
               <input
                 matInput
                 [matDatepicker]="myDatepicker"
@@ -21,7 +21,8 @@
           }
           @case (inputType.input) {
             <mat-form-field class="col-xs-12 col-sm-6 col-lg-4 ; padded-field">
-              <mat-label>{{ propInfo.name }}</mat-label>
+              <!-- <mat-label>{{ propInfo.name }}</mat-label> -->
+              <mat-label>{{ entityTranslations[propInfo.name] }}</mat-label>
               <input
                 matInput
                 [type]="propInfo.firstType ?? ''"
@@ -54,8 +55,10 @@
           }
         }
       }
-      <button mat-raised-button color="primary" (click)="save()">Submit</button>
-      <button mat-raised-button color="warn" (click)="cancel()">Cancel</button>
+      <div>
+        <button mat-raised-button color="primary" (click)="save()">{{ translations.save }}</button>
+        <button mat-raised-button color="warn" (click)="cancel()">{{ translations.cancel }}</button>
+      </div>
     </form>
   </mat-card>
 </div>
