--- a/projects/admin/src/app/app.component.html
+++ b/projects/admin/src/app/app.component.html
@@ -4,6 +4,7 @@
       <mat-icon>menu</mat-icon>
     </button>
     <h1 class="example-app-name">Responsive App</h1>
+    <app-header></app-header>
   </mat-toolbar>
 
   <mat-sidenav-container
