--- a/projects/admin/src/app/layout/header/header.component.html
+++ b/projects/admin/src/app/layout/header/header.component.html
@@ -1,18 +1,14 @@
-<mat-toolbar>
-  <mat-toolbar-row class="user-icon">
-    <button mat-button [matMenuTriggerFor]="menu">
-      <mat-icon class="user-image-icon ml-1">keyboard_arrow_down</mat-icon>
-      <img src="./assets/user.jpg" alt="" class="user-image mr-1 p-2" />
-    </button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item>
-        <mat-icon> account_circle </mat-icon>
-        Edit Profile
-      </button>
-      <button mat-menu-item (click)="logout()">
-        <mat-icon>exit_to_app</mat-icon>
-        Logout
-      </button>
-    </mat-menu>
-  </mat-toolbar-row>
-</mat-toolbar>
+<button mat-button [matMenuTriggerFor]="menu">
+  <img src="./assets/user.jpg" alt="" class="user-image mr-1 p-2" />
+</button>
+
+<mat-menu #menu="matMenu">
+  <a mat-menu-item [routerLink]="'profile'">
+    <mat-icon> account_circle </mat-icon>
+    Edit Profile
+  </a>
+  <button mat-menu-item (click)="logout()">
+    <mat-icon>exit_to_app</mat-icon>
+    Logout
+  </button>
+</mat-menu>
