--- a/projects/admin/src/app/shared/components/dynamic-form/dynamic-form.component.html
+++ b/projects/admin/src/app/shared/components/dynamic-form/dynamic-form.component.html
@@ -1,4 +1,5 @@
 <h2>{{ pageTitle }}</h2>
+<pre>{{ formValue.value | json }}</pre>
 <app-dynamic-fields [formControl]="formValue" [entityName]="entityName" />
 <div>
   <button mat-raised-button color="primary" (click)="save()">{{ translations.save }}</button>
