--- a/projects/admin/src/app/shared/components/dynamic-fields/components/relation/relation.component.html
+++ b/projects/admin/src/app/shared/components/dynamic-fields/components/relation/relation.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
-  <mat-label>{{ entityName }}</mat-label>
-  <input type="text" [formControl]="filterControl" matInput [matAutocomplete]="auto" />
+  <mat-label>{{ propInfo.guiInfo.label }}</mat-label>
+  <input type="text" [formControl]="formControl" matInput [matAutocomplete]="auto" />
   <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" [displayWith]="displayFn">
     @for (option of result.items; track option) {
       <mat-option [value]="option">{{ option.name }}</mat-option>
